[gd_scene load_steps=11 format=2]

[ext_resource path="res://Area2D.gd" type="Script" id=2]
[ext_resource path="res://Billeder/hus-1-x2.png" type="Texture" id=4]
[ext_resource path="res://Billeder/skitse2.jpg" type="Texture" id=5]
[ext_resource path="res://House.gd" type="Script" id=7]
[ext_resource path="res://Area2D4.gd" type="Script" id=8]
[ext_resource path="res://Billeder/raket.png" type="Texture" id=9]
[ext_resource path="res://Node2D.gd" type="Script" id=10]
[ext_resource path="res://Billeder/rakethus .png" type="Texture" id=11]
[ext_resource path="res://robot.tres" type="DynamicFont" id=12]
[ext_resource path="res://UnderUdvikling.gd" type="Script" id=13]

[node name="Main world" type="Node"]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 640, 360 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="House" type="Node2D" parent="."]
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}
mouse_out = Color( 1, 1, 1, 1 )
mouse_over = Color( 0.360784, 0.360784, 0.360784, 1 )

[node name="Sprite" type="Sprite" parent="House"]
position = Vector2( 1056, 536 )
texture = ExtResource( 4 )

[node name="Area2D3" type="Area2D" parent="House"]
position = Vector2( 1056, 536 )
script = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="House/Area2D3"]
polygon = PoolVector2Array( 24, 120, -152, 128, -152, 0, -184, 24, -56, -120, 48, -160, 128, -56, 128, 56 )

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( 208, 256 )
script = ExtResource( 10 )
__meta__ = {
"_edit_group_": true
}
mouse_out = Color( 1, 1, 1, 1 )
mouse_over = Color( 0.360784, 0.360784, 0.360784, 1 )

[node name="Sprite" type="Sprite" parent="Node2D"]
visible = false
texture = ExtResource( 11 )

[node name="Sprite2" type="Sprite" parent="Node2D"]
position = Vector2( -48.2561, 2.2042 )
scale = Vector2( 1.73838, 1.43431 )
texture = ExtResource( 9 )

[node name="Area2D4" type="Area2D" parent="Node2D"]
script = ExtResource( 8 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Node2D/Area2D4"]
position = Vector2( -1, -2 )
polygon = PoolVector2Array( 93, 80, 117, 57, 116, -61, 33, -63, -1, -41, -2, 32, -27, 21, -31, -51, -51, -95, -76, -46, -80, 24, -117, 44, -110, 75, -101, 69, -101, 60, -77, 43, -62, 65, -71, 81, -57, 88, -48, 86, -31, 82, -39, 66, -31, 44, -1, 54, 0, 81 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UnderUdvikling" type="Control" parent="CanvasLayer"]
visible = false
margin_right = 1280.0
margin_bottom = 720.0
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/UnderUdvikling"]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 0.247059 )

[node name="Label" type="Label" parent="CanvasLayer/UnderUdvikling/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -203.5
margin_top = -28.5
margin_right = 203.5
margin_bottom = 28.5
custom_fonts/font = ExtResource( 12 )
text = "UNDER UDVIKLING"
align = 1

[node name="Button" type="Button" parent="CanvasLayer/UnderUdvikling/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = 55.9999
margin_right = 90.0
margin_bottom = 119.0
custom_fonts/font = ExtResource( 12 )
text = "Tilbage"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="House/Area2D3" to="House/Area2D3" method="_on_Area2D_mouse_entered"]
[connection signal="mouse_entered" from="House/Area2D3" to="House" method="_on_Area2D3_mouse_entered"]
[connection signal="mouse_exited" from="House/Area2D3" to="House/Area2D3" method="_on_Area2D_mouse_exited"]
[connection signal="mouse_exited" from="House/Area2D3" to="House" method="_on_Area2D3_mouse_exited"]
[connection signal="mouse_entered" from="Node2D/Area2D4" to="Node2D/Area2D4" method="_on_Area2D4_mouse_entered"]
[connection signal="mouse_entered" from="Node2D/Area2D4" to="Node2D" method="_on_Area2D4_mouse_entered"]
[connection signal="mouse_exited" from="Node2D/Area2D4" to="Node2D/Area2D4" method="_on_Area2D4_mouse_exited"]
[connection signal="mouse_exited" from="Node2D/Area2D4" to="Node2D" method="_on_Area2D4_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/UnderUdvikling/ColorRect/Button" to="CanvasLayer/UnderUdvikling" method="_on_Button_pressed"]
